--- a/src/index.css
+++ b/src/index.css
@@ -6,57 +6,146 @@
   margin: 0;
   padding: 0;
 }
+body{
+  display: flex;
+  justify-content: center;
+  align-content: center;
+}
+spam{
+    color: #b8afaf;
+}
+
+input, textarea {
+  outline: none;
+  border: none;
+  border: solid 1px #b8afaf;
+  }
 :focus { outline: 0; }
 
+.wrapper img{
+  background-size: cover;
+  max-width: 1000%;
+  max-height: 150vh;
+  object-fit: contain;
+  object-position: center;
+  overflow-x: hidden;
+  z-index: 0;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0; 
+  bottom: 0;
+  box-shadow: inset 0 0 0 3000px rgba(255,255,255,0.3);
+  filter: blur(10px);
+}
+
+
+
 .container{
-  max-width: 1000px;
+  box-shadow: 10px 10px 10px rgb(170, 167, 167);
+  border: solid 0.5px  rgb(230, 230, 230);
+  border-radius: 15px;
+  max-width: 800px;
   margin: 0 auto;
+  margin-top: 20px;
   padding: 0 15px;
+    position: relative;
+  -webkit-border-radius: 15px;
+  -moz-border-radius: 15px;
+  -ms-border-radius: 15px;
+  -o-border-radius: 15px;
+
 }
 /* SearchPanel */
 .search__row {
-    margin-top: 10px;
-    width: 100%;
-    display: grid;
-    grid-template-columns: 10fr 2fr;
-    
-    
+  position: relative;
+  width: 100%;
+  display: grid;
+  grid-template-columns: 4fr 1fr 7fr;
+  column-gap: 5px;
+  justify-items: start;
+    padding: 20px 5px;
+    margin-bottom: 10px;
+}
+.search__row p{
+  color:  rgb(170, 167, 167);
 }
 .search__value {
-  width: 100%;
-  font-size: 22px;
-  position: relative;
-  box-shadow: 0 5px 0px #3c354a;
-  transition: all 0.5s;
-  -webkit-transition: all 0.5s;
-  -moz-transition: all 0.5s;
-  -ms-transition: all 0.5s;
-  -o-transition: all 0.5s;
-  background: linear-gradient(90deg, #ece89d, #ece89d) 0 30px/100% 8px repeat-x;
-  font-weight: 500;
-  
-}
-.search__btn{
-  border-bottom-right-radius: 45%;
-  position: relative;
-  box-shadow: 0 5px 0px #3c354a;
-  transition: all 0.5s;
-  -webkit-transition: all 0.5s;
-  -moz-transition: all 0.5s;
-  -ms-transition: all 0.5s;
-  -o-transition: all 0.5s;
-  background: linear-gradient(90deg, #ece89d, #ece89d) 0 30px/100% 8px repeat-x;
-  font-weight: 500;
-}
-.search__btn:hover{
-    top: 2px;
-    box-shadow: 0 3px 0px #3c354a;
-    text-shadow: 0 0.1px 0px #3c354a;
+    padding-left: 15px;
+    width: 100%;
+    font-size: 18px;
+    border-radius: 15px;
+    -webkit-border-radius: 15px;
+    -moz-border-radius: 15px;
+    -ms-border-radius: 15px;
+    -o-border-radius: 15px;
+    transition-duration: 0.2s;
 }
 .search__value:focus{
-  top: 2px;
-  box-shadow: 0 0.1px 0px #3c354a;
+  border: solid 0.6px #07a1ac33;
 }
+.search__btn{
+  border: solid 0.5px  rgb(230, 230, 230);
+  width: 30px;
+  height: 30px;
+  border-radius: 15px;
+  -webkit-border-radius: 15px;
+  -moz-border-radius: 15px;
+  -ms-border-radius: 15px;
+  -o-border-radius: 15px;
+  transition-duration: 0.7s;
+}
+.search__btn:active{
+  background: #0e242533;
+}
+
+
+.location-img{
+    border-radius: 15px;
+    -webkit-border-radius: 15px;
+    -moz-border-radius: 15px;
+    -ms-border-radius: 15px;
+    -o-border-radius: 15px;
+    position: absolute;
+    right: 0px;
+    top: 0;
+    box-shadow: 10px 10px 10px rgb(170, 167, 167);
+    border: solid 0.5px  rgb(230, 230, 230);
+    transition-duration: 0.3s;
+    animation: location 0.3s infinite;
+    -webkit-animation: location 0.4s;
+    animation-iteration-count: 3;
+    animation-delay: 1s;
+}
+.location-img:active{
+  top: 3px;
+}
+.location-img img{
+  width: 60%;
+  height: 60%;
+}
+.search-title{
+    position: absolute;
+    color: rgb(170, 167, 167);
+    top: 20px;
+    right: 150px;
+}
+@keyframes location {
+  0%{
+    
+    top: 0px;
+  }
+  100%{
+    
+    top: 5px;
+    
+  }
+}
+
+@media (max-width: 850px) {
+    
+}
+
 
 
 
