--- a/src/components/fiveDay/FiveDay.css
+++ b/src/components/fiveDay/FiveDay.css
@@ -11,13 +11,10 @@
 }
 .five-card{
     position: relative;
-    box-shadow: 10px 10px 10px rgb(170, 167, 167);
-    border: solid 0.5px  rgb(230, 230, 230);
-    border-radius: 15px;
-    -webkit-border-radius: 15px;
-    -moz-border-radius: 15px;
-    -ms-border-radius: 15px;
-    -o-border-radius: 15px;
+    box-shadow: var(--box-shadow);
+    border: var(--border);
+    border-radius: var(--border-radius);
+
     margin-bottom: 15px;
 
 }
@@ -31,7 +28,7 @@
 .five-date{
     padding: 2px;
     font-size: 12px;
-    border-bottom: solid 0.5px  rgb(230, 230, 230);
+    border-bottom: var(--border);
 }
 .five-temp{
     font-size: 14px;
