--- a/src/index.css
+++ b/src/index.css
@@ -5,14 +5,26 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+
+    color: var(--color-white);
+}
+input{
+    color: black;
+}
+:root {
+    --box-shadow:  inset 0px 0px 3px 4px rgba(121, 115, 115, 0.6);
+    --border:  solid 3px rgba(248, 246, 246, 0.02);
+    --color-white: #fff;
+    --border-radius: 15px;
 }
 body{
   display: flex;
   justify-content: center;
   align-content: center;
+    overflow-y: hidden;
 }
-spam{
-    color: #b8afaf;
+span{
+    color: var(--color-white);
 }
 
 input, textarea {
@@ -23,38 +35,31 @@ input, textarea {
 :focus { outline: 0; }
 
 .wrapper img{
-  background-size: cover;
-  max-width: 1000%;
-  max-height: 150vh;
-  object-fit: contain;
-  object-position: center;
-  overflow-x: hidden;
-  z-index: 0;
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 0; 
-  bottom: 0;
-  box-shadow: inset 0 0 0 3000px rgba(255,255,255,0.3);
-  filter: blur(10px);
+    position: absolute;
+    background-size: contain;
+    top: 0;
+
+    right: 0;
+    left: 0;
+    max-width: 100%;
+
 }
 
-
-
 .container{
-  box-shadow: 10px 10px 10px rgb(170, 167, 167);
-  border: solid 0.5px  rgb(230, 230, 230);
-  border-radius: 15px;
+    background: transparent;
+  box-shadow: var(--box-shadow);
+  border: var(--border);
+  border-radius: var(--border-radius);
   max-width: 800px;
   margin: 0 auto;
   margin-top: 20px;
   padding: 0 15px;
     position: relative;
-  -webkit-border-radius: 15px;
-  -moz-border-radius: 15px;
-  -ms-border-radius: 15px;
-  -o-border-radius: 15px;
-
+    background: rgba(255, 255, 255, 0.28);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(7.9px);
+    -webkit-backdrop-filter: blur(7.9px);
 }
 /* SearchPanel */
 .search__row {
@@ -66,33 +71,27 @@ input, textarea {
   justify-items: start;
     padding: 20px 5px;
     margin-bottom: 10px;
+
 }
 .search__row p{
-  color:  rgb(170, 167, 167);
+  color: var(--color-white);
 }
 .search__value {
     padding-left: 15px;
     width: 100%;
     font-size: 18px;
-    border-radius: 15px;
-    -webkit-border-radius: 15px;
-    -moz-border-radius: 15px;
-    -ms-border-radius: 15px;
-    -o-border-radius: 15px;
+    border-radius: var(--border-radius);
     transition-duration: 0.2s;
 }
 .search__value:focus{
   border: solid 0.6px #07a1ac33;
 }
 .search__btn{
-  border: solid 0.5px  rgb(230, 230, 230);
+    background: gray;
+    border: solid #b8afaf 3px;
   width: 30px;
   height: 30px;
-  border-radius: 15px;
-  -webkit-border-radius: 15px;
-  -moz-border-radius: 15px;
-  -ms-border-radius: 15px;
-  -o-border-radius: 15px;
+  border-radius: var(--border-radius);
   transition-duration: 0.7s;
 }
 .search__btn:active{
@@ -101,21 +100,17 @@ input, textarea {
 
 
 .location-img{
-    border-radius: 15px;
-    -webkit-border-radius: 15px;
-    -moz-border-radius: 15px;
-    -ms-border-radius: 15px;
-    -o-border-radius: 15px;
+    background: transparent;
+    border-radius: var(--border-radius);
     position: absolute;
     right: 0px;
     top: 0;
-    box-shadow: 10px 10px 10px rgb(170, 167, 167);
-    border: solid 0.5px  rgb(230, 230, 230);
+    border: transparent;
     transition-duration: 0.3s;
-    animation: location 0.3s infinite;
-    -webkit-animation: location 0.4s;
-    animation-iteration-count: 3;
-    animation-delay: 1s;
+    animation-duration: 0.5s;
+    animation-delay: 2s;
+    animation-name: location;
+
 }
 .location-img:active{
   top: 3px;
@@ -130,20 +125,47 @@ input, textarea {
     top: 20px;
     right: 150px;
 }
-@keyframes location {
+.airhelp{
+    position: absolute;
+    border-radius: var(--border-radius);
+    border-end-end-radius: 0px;
+    padding: 5px;
+    color: var(--color-white);
+    top: -7px;
+    left: 63%;
+    background: #006893;
+    animation-duration: 4s;
+    animation-delay: 1s;
+    animation-name: help;
+    opacity: 0;
+}
+@keyframes help {
   0%{
-    
-    top: 0px;
+    opacity: 0;
   }
-  100%{
-    
-    top: 5px;
-    
+
+  80%{
+      opacity: 1;
   }
 }
+@keyframes location {
+    0%{
+        top: 3px;
+    }
 
-@media (max-width: 850px) {
-    
+    80%{
+
+    }
+}
+
+
+@media (max-width: 950px) {
+    body{
+        overflow-y: scroll;
+    }
+    .wrapper img{
+        height: 100vh;
+    }
 }
 
 
