--- a/src/index.css
+++ b/src/index.css
@@ -14,14 +14,16 @@ input{
 :root {
     --box-shadow:  inset 0px 0px 3px 4px rgba(121, 115, 115, 0.6);
     --border:  solid 3px rgba(248, 246, 246, 0.02);
-    --color-white: #fff;
+    --color-white: #ffffff;
     --border-radius: 15px;
+    --text-shadow: 1px 1px black;
 }
 body{
-  display: flex;
+  display: grid;
   justify-content: center;
   align-content: center;
     overflow-y: hidden;
+
 }
 span{
     color: var(--color-white);
@@ -52,14 +54,16 @@ input, textarea {
   border-radius: var(--border-radius);
   max-width: 800px;
   margin: 0 auto;
-  margin-top: 20px;
+  margin-top: 15px;
   padding: 0 15px;
     position: relative;
-    background: rgba(255, 255, 255, 0.28);
+    background: rgba(108, 103, 103, 0.35);
     border-radius: 16px;
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(7.9px);
     -webkit-backdrop-filter: blur(7.9px);
+    border: 1px solid rgba(108, 103, 103, 0.3);
+    text-shadow: var(--text-shadow);
 }
 /* SearchPanel */
 .search__row {
@@ -159,13 +163,77 @@ input, textarea {
 }
 
 
-@media (max-width: 950px) {
+@media (max-width: 1005px) {
     body{
         overflow-y: scroll;
     }
     .wrapper img{
-        height: 100vh;
+
+        height: 100%;
+        width: 100%;
     }
+    .container{
+        margin-bottom: -5px;
+        height: 98%;
+        width: 90%;
+    }
+
+}
+@media (max-width: 798px) {
+    .wrapper img{
+        height: 127%;
+        width: 100%;
+    }
+    .search__row{
+        grid-template-columns: 5fr 1fr 7fr;
+    }
+
+}
+@media (max-width: 720px) {
+    .info-item{
+        font-size: 16px;
+    }
+    .wrapper img{
+        height: 127%;
+        width: 100%;
+    }
+}
+@media (max-width: 420px) {
+    h2{
+        margin-right: 50px;
+    }
+    .temp-city{
+        margin-right: 50px;
+    }
+
+}
+@media (max-width: 678px) {
+    .wrapper img{
+        height: 121%;
+        width: 100%;
+    }
+    .search__row{
+        grid-template-columns: 6fr 1fr 5fr;
+    }
+    .location-img{
+        margin-top: 5px;
+        max-width: 80px;
+    }
+
+}
+@media (max-width: 550px) {
+    /*.wrapper img{*/
+    /*    height: 142%;*/
+    /*    width: 100%;*/
+    /*}*/
+    .search__row{
+        grid-template-columns: 8fr 1fr 3fr;
+    }
+    .location-img{
+        max-width: 60px;
+        margin: 13px 7px 0 0;
+    }
+
 }
 
 
