--- a/src/index.css
+++ b/src/index.css
@@ -136,12 +136,13 @@ input, textarea {
     padding: 5px;
     color: var(--color-white);
     top: -7px;
-    left: 63%;
+    left: 70%;
     background: #006893;
     animation-duration: 4s;
     animation-delay: 1s;
     animation-name: help;
     opacity: 0;
+    font-size: 14px;
 }
 @keyframes help {
   0%{
@@ -187,6 +188,9 @@ input, textarea {
     .search__row{
         grid-template-columns: 5fr 1fr 7fr;
     }
+    .airhelp{
+        left: 67%;
+    }
 
 }
 @media (max-width: 720px) {
@@ -208,6 +212,9 @@ input, textarea {
 
 }
 @media (max-width: 678px) {
+    .airhelp{
+        left: 57%;
+    }
     .wrapper img{
         height: 121%;
         width: 100%;
@@ -228,13 +235,14 @@ input, textarea {
     /*}*/
     .search__row{
         grid-template-columns: 8fr 1fr 3fr;
-    }npm
+    }
     .location-img{
 
         margin: 13px 7px 0 0;
     }
      .airhelp{
          font-size: 8px;
+         left: 63%;
      }
 
 
